--- a/devel/spirv-llvm-translator/Makefile
+++ b/devel/spirv-llvm-translator/Makefile
@@ -6,7 +6,6 @@ DISTVERSION_llvm20=	20.1.9
 DISTVERSION_llvm19=	19.1.14
 DISTVERSION_llvm18=	18.1.19
 DISTVERSION_llvm17=	17.0.19
-DISTVERSION_llvm16=	16.0.19
 DISTVERSION_llvm15=	15.0.19
 DISTVERSION_llvm12=	12.0.1
 CATEGORIES=	devel
@@ -21,7 +20,7 @@ LICENSE_FILE=	${WRKSRC}/LICENSE.TXT
 
 LIB_DEPENDS=	libLLVM-${FLAVOR:S/llvm//}.so:devel/${FLAVOR}
 
-FLAVORS=	${21 20 19 18 17 16 15 12:L:S/^/llvm/}
+FLAVORS=	${21 20 19 18 17 15 12:L:S/^/llvm/}
 CONFLICTS_BUILD=${FLAVOR}-lite
 
 USES=		cmake compiler:c++11-lib
