--- a/devel/glib20/Makefile
+++ b/devel/glib20/Makefile
@@ -161,6 +161,7 @@ post-install:
 	-${RM} -r ${PREFIX}/libexec/installed-tests
 .if ${FLAVOR:U} == bootstrap
 	${MKDIR} ${PREFIX}/libdata/ldconfig
+	-${CP} ${FAKE_DESTDIR}${LOCALBASE}/libdata/ldconfig/glib-bootstrap ${PREFIX}/libdata/ldconfig/glib-bootstrap
 #	${LN} -sf ${FAKE_DESTDIR}${LOCALBASE}/libdata/ldconfig/glib-bootstrap ${PREFIX}/libdata/ldconfig/glib-bootstrap
 .endif
 
