--- a/security/Makefile
+++ b/security/Makefile
@@ -154,6 +154,7 @@
     SUBDIR += openssl
     SUBDIR += openssl111
     SUBDIR += openssl31
+    SUBDIR += openssl36
     SUBDIR += openvas
     SUBDIR += openvpn
     SUBDIR += osv-scanner
