--- a/games/minetest_game/Makefile
+++ b/games/minetest_game/Makefile
@@ -20,9 +20,9 @@ GH_TAGNAME=	093cd28
 NO_BUILD=	yes
 NO_ARCH=	yes
 DATADIR=	${TRUE_PREFIX}/share/luanti/games/${PORTNAME}
-#PORTDATA=	*
+PORTDATA=	*
 PORTDOCS=	README.md game_api.txt schematic_tables.txt settingtypes.txt
-#PORTEXAMPLES=	*
+PORTEXAMPLES=	*
 PLIST_SUB+=	DATADIR=${DATADIR_REL}
 
 OPTIONS_DEFINE=	DOCS EXAMPLES
