update nspr, nss, ca_root_nss

--- a/security/xmlsec1/files/patch-Makefile.in
+++ b/security/xmlsec1/files/patch-Makefile.in
@@ -1,6 +1,6 @@
---- Makefile.in.orig	2017-12-12 16:05:23.187628000 +0300
-+++ Makefile.in	2017-12-12 16:07:19.241092000 +0300
-@@ -480,7 +480,7 @@
+--- Makefile.in.orig	2023-12-08 23:22:46 UTC
++++ Makefile.in
+@@ -504,7 +504,7 @@ pkgconfigdir = $(prefix)/libdata/pkgconfig
  bin_SCRIPTS = xmlsec1-config
  pkgconfig_DATA = xmlsec1.pc @XMLSEC_CRYPTO_PC_FILES_LIST@
  pkgconfigdir = $(prefix)/libdata/pkgconfig
