x11-toolkits/py-tkinter: update build

--- a/x11-toolkits/py-tkinter/Makefile
+++ b/x11-toolkits/py-tkinter/Makefile
@@ -1,23 +1,27 @@
 PORTNAME=	tkinter
 DISTVERSION=	${PYTHON_DISTVERSION}
-PORTREVISION=	7
+PORTREVISION=	8
 CATEGORIES=	x11-toolkits python
 MASTER_SITES=	PYTHON/ftp/python/${DISTVERSION}
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	Python-${DISTVERSION}
+DIST_SUBDIR=	python
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python bindings to the Tk widget set
 
 LICENSE=	python
+LICENSE_FILE=	${WRKDIR}/Python-${DISTVERSION}/LICENSE
+
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>0:devel/py-wheel@${PY_FLAVOR}
 
 USES=		compiler:c11 python tar:xz tk:86 xorg
-USE_PYTHON=	distutils autoplist allflavors
+USE_PYTHON=	allflavors autoplist pep517
 USE_XORG=	x11
 
 CFLAGS+=	-I${LOCALBASE}/include/tcl8.6/generic/
 
-DIST_SUBDIR=	python
 DISTINFO_FILE=	${PORTSDIR}/lang/python${PYTHON_SUFFIX}/distinfo
 WRKSRC_SUBDIR=	Modules
 
@@ -27,11 +31,7 @@ SUB_FILES=	pyproject.toml \
 		setup.py
 PLIST_FILES=	${PYTHONPREFIX_LIBDIR:S;${PREFIX}/;;}/lib-dynload/_tkinter${PYTHON_SOABI}.so
 
-#PYDISTUTILS_INSTALLARGS+=	--install-lib ${PYTHON_LIBDIR}/lib-dynload
-
 PORTSCOUT=	ignore:1
-
-.include <bsd.port.pre.mk>
 
 pre-configure:
 	@${MV} ${WRKDIR}/pyproject.toml ${WRKSRC}
@@ -43,4 +43,7 @@ post-install:
 	${MKDIR} ${FAKE_DESTDIR}${PYTHONPREFIX_LIBDIR}/lib-dynload
 	(cd ${FAKE_DESTDIR}${PYTHONPREFIX_LIBDIR}/lib-dynload && ${LN} -s ../site-packages/_tkinter${PYTHON_SOABI}.so)
 
-.include <bsd.port.post.mk>
+do-test:
+	@${PYTHON_CMD} -c 'import tkinter' # minimal smoke test
+
+.include <bsd.port.mk>
