--- a/lang/python310/Makefile
+++ b/lang/python310/Makefile
@@ -1,16 +1,24 @@
 PORTNAME=	python
 DISTVERSION=	${PYTHON_DISTVERSION}
+PORTREVISION=	1
 CATEGORIES=	lang python
 MASTER_SITES=	PYTHON/ftp/python/${DISTVERSION:C/[a-z].*//}
 PKGNAMESUFFIX=	${PYTHON_SUFFIX}
 DISTNAME=	Python-${DISTVERSION}
 DIST_SUBDIR=	python
 
+PATCH_SITES=	https://github.com/python/cpython/commit/
+PATCHFILES=	c97e87593063d84a2bd9fe7068b30eb44de23dc0.patch:-p1 \
+		5dc101675fd22918facbbe0fecdc821502beaaf0.patch:-p1
+
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Interpreted object-oriented programming language
 WWW=		https://www.python.org/
 
 LICENSE=	python
+
+DEPRECATED=	Python 3.10 is an old version in the last year of security support, see to it that your favorite ports get updated for newer Python releases in due time
+EXPIRATION_DATE=2026-09-30
 
 LIB_DEPENDS=	libffi.so:devel/libffi
 
