update spotifyd, add librespot, update spotify-qt

--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -88,6 +88,7 @@
     SUBDIR += libmediainfo
     SUBDIR += libmpeg2
     SUBDIR += libmtp
+    SUBDIR += librespot
     SUBDIR += librist
     SUBDIR += libtheora
     SUBDIR += libuvc
