--- a/misc/iso-codes/Makefile
+++ b/misc/iso-codes/Makefile
@@ -1,25 +1,20 @@
 PORTNAME=	iso-codes
-DISTVERSIONPREFIX=	v
-DISTVERSION=	4.15.0
+PORTVERSION=	4.20.1
 CATEGORIES=	misc
+MASTER_SITES=	DEBIAN_POOL
+DISTNAME=	iso-codes_${PORTVERSION}.orig
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Lists of the country, language, and currency iso names
 WWW=		https://salsa.debian.org/iso-codes-team/iso-codes
 
 LICENSE=	lgpl2.1
+LICENSE_FILE=	${WRKSRC}/LICENSES/LGPL-2.1-or-later.txt
 
-USES=		gettext-tools gmake pathfix python:build tar:xz
+USES=		gettext-tools meson python:build tar:xz
 
-BUILD_DEPENDS+=	python3:lang/python3
-
-GNU_CONFIGURE=	yes
+BINARY_ALIAS=	python3=${PYTHON_CMD}
 NO_ARCH=	yes
-
-USE_GITLAB=	yes
-GL_SITE=	https://salsa.debian.org
-GL_ACCOUNT=	iso-codes-team
-
-BINARY_ALIAS=	python3=${PYTHON_VERSION}
+WRKSRC=		${WRKDIR}/iso-codes-${PORTVERSION}
 
 .include <bsd.port.mk>
