magus qa script

--- a/devel/rubygem-tzinfo/Makefile
+++ b/devel/rubygem-tzinfo/Makefile
@@ -10,6 +10,7 @@ WWW=		https://tzinfo.github.io/
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+BUILD_DEPENDS=	rubygem-concurrent-ruby>=1.0:devel/rubygem-concurrent-ruby
 RUN_DEPENDS=	rubygem-concurrent-ruby>=1.0:devel/rubygem-concurrent-ruby
 
 USES=		gem
