textproc/rubygem-ronn: dep

--- a/textproc/rubygem-ronn/Makefile
+++ b/textproc/rubygem-ronn/Makefile
@@ -13,6 +13,7 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 RUN_DEPENDS=	rubygem-hpricot>=0.8.2:www/rubygem-hpricot \
 		rubygem-rdiscount>=1.5.8:textproc/rubygem-rdiscount \
 		rubygem-mustache>=0.7.0:devel/rubygem-mustache
+BUILD_DEPENDS=	${RUN_DEPENDS}
 
 USES=		gem
 
