\s doesn't seem to work here.  use [ \t] in maintainer.mk
add vscode related ports. consider them WIP

--- a/editors/Makefile
+++ b/editors/Makefile
@@ -1,48 +1,50 @@
-COMMENT = Editors
+    COMMENT = Editors
 
-SUBDIR += 2bsd-vi
-SUBDIR += abiword
-SUBDIR += abiword-docs
-SUBDIR += editorconfig-core-c
-SUBDIR += emacs
-SUBDIR += emacs-devel
-SUBDIR += gedit
-SUBDIR += gedit-plugins
-SUBDIR += gnome-latex
-SUBDIR += gnome-text-editor
-SUBDIR += impress
-SUBDIR += jedit
-SUBDIR += joe
-SUBDIR += jupp
-SUBDIR += kate
-SUBDIR += lazarus
-SUBDIR += lazarus-qt5
-SUBDIR += lazarus-qt6
-SUBDIR += libreoffice
-SUBDIR += linux-openoffice3
-SUBDIR += linux-sublime
-SUBDIR += linux-sublime-text4
-SUBDIR += linux-sublime3
-SUBDIR += linux-wps-office
-SUBDIR += mg
-SUBDIR += mousepad
-SUBDIR += nano
-SUBDIR += neovim
-SUBDIR += neovim-gtk
-SUBDIR += neovim-qt
-SUBDIR += nvi-devel
-SUBDIR += nvi2
-SUBDIR += openoffice-4
-SUBDIR += pico-alpine
-SUBDIR += py-editorconfig
-SUBDIR += slime
-SUBDIR += tea
-SUBDIR += ted
-SUBDIR += vim
-SUBDIR += xcoral
-SUBDIR += xed
-SUBDIR += xnedit
-SUBDIR += yudit
-SUBDIR += zile
+    SUBDIR += 2bsd-vi
+    SUBDIR += abiword
+    SUBDIR += abiword-docs
+    SUBDIR += editorconfig-core-c
+    SUBDIR += emacs
+    SUBDIR += emacs-devel
+    SUBDIR += gedit
+    SUBDIR += gedit-plugins
+    SUBDIR += gnome-latex
+    SUBDIR += gnome-text-editor
+    SUBDIR += impress
+    SUBDIR += jedit
+    SUBDIR += joe
+    SUBDIR += jupp
+    SUBDIR += kate
+    SUBDIR += lazarus
+    SUBDIR += lazarus-qt5
+    SUBDIR += lazarus-qt6
+    SUBDIR += libreoffice
+    SUBDIR += linux-openoffice3
+    SUBDIR += linux-sublime
+    SUBDIR += linux-sublime-text4
+    SUBDIR += linux-sublime3
+    SUBDIR += linux-vscode
+    SUBDIR += linux-wps-office
+    SUBDIR += mg
+    SUBDIR += mousepad
+    SUBDIR += nano
+    SUBDIR += neovim
+    SUBDIR += neovim-gtk
+    SUBDIR += neovim-qt
+    SUBDIR += nvi-devel
+    SUBDIR += nvi2
+    SUBDIR += openoffice-4
+    SUBDIR += pico-alpine
+    SUBDIR += py-editorconfig
+    SUBDIR += slime
+    SUBDIR += tea
+    SUBDIR += ted
+    SUBDIR += vim
+    SUBDIR += vscode
+    SUBDIR += xcoral
+    SUBDIR += xed
+    SUBDIR += xnedit
+    SUBDIR += yudit
+    SUBDIR += zile
 
 .include <bsd.port.subdir.mk>
