--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -245,6 +245,7 @@
     SUBDIR += rpi-firmware
     SUBDIR += rsyslog8
     SUBDIR += rubygem-bundler
+    SUBDIR += rubygem-chef-winrm
     SUBDIR += rubygem-fluent-mixin-plaintextformatter
     SUBDIR += rubygem-fluent-plugin-config-expander
     SUBDIR += rubygem-fluent-plugin-file-alternative
