--- a/net/Makefile
+++ b/net/Makefile
@@ -280,6 +280,7 @@
     SUBDIR += rubygem-oauth
     SUBDIR += rubygem-oauth-tty
     SUBDIR += rubygem-openid_connect
+    SUBDIR += rubygem-rsync
     SUBDIR += rubygem-serverengine
     SUBDIR += rubygem-simple_oauth
     SUBDIR += rubygem-t
