--- a/mail/Makefile
+++ b/mail/Makefile
@@ -145,6 +145,7 @@
     SUBDIR += roundcube-thunderbird_labels
     SUBDIR += rspamd
     SUBDIR += rubygem-actionmailer4
+    SUBDIR += rubygem-email_validator
     SUBDIR += rubygem-mail
     SUBDIR += rubygem-mini_mime
     SUBDIR += rubygem-net-imap
