--- a/www/Makefile
+++ b/www/Makefile
@@ -173,6 +173,7 @@
     SUBDIR += p5-HTTP-MultiPartParser
     SUBDIR += p5-HTTP-Negotiate
     SUBDIR += p5-HTTP-Parser
+    SUBDIR += p5-HTTP-Parser-XS
     SUBDIR += p5-HTTP-Request-AsCGI
     SUBDIR += p5-HTTP-Server-Simple
     SUBDIR += p5-HTTP-Server-Simple-PSGI
