--- a/devel/Makefile
+++ b/devel/Makefile
@@ -924,6 +924,7 @@
     SUBDIR += p5-POE
     SUBDIR += p5-POE-API-Peek
     SUBDIR += p5-POE-Test-Loops
+    SUBDIR += p5-POEx-Role-SessionInstantiation
     SUBDIR += p5-POEx-Role-Streaming
     SUBDIR += p5-POEx-Types
     SUBDIR += p5-POSIX-strftime-Compiler
