--- a/net/Makefile
+++ b/net/Makefile
@@ -286,6 +286,7 @@
     SUBDIR += rubygem-ruby-openid
     SUBDIR += rubygem-serverengine
     SUBDIR += rubygem-simple_oauth
+    SUBDIR += rubygem-spamcheck
     SUBDIR += rubygem-stackdriver-core
     SUBDIR += rubygem-stompserver
     SUBDIR += rubygem-t
